kubernetes/archive/default/03-default-web.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    app: default-web
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
spec:
  selector:
    app: default-web
  ports:
    - name: http
      protocol: TCP
      port: 80
