kubernetes/archive/default/04-default-web.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  labels:
    app: default-web
spec:
  ingressClassName: nginx
  rules:
    - host: "example.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
